# ceng543_project

./: .gitignore  README.md  check_longt5.py  check_longt5_models.py  create_bigbird_2048_config.py  debug_flash_api.py  debug_flash_sig.py  debug_led_modules.py  find_longt5_models.py  generate_equal_budget_report.py  inspect_longt5.py  longt5_inspection.txt  main.py  main_chunk_retrieval.py  main_colbert_benchmark.py  main_faiss_benchmark.py  main_faiss_benchmark_v2.py  main_plaid_benchmark.py  pyproject.toml  requirements.txt  test_5_models.py  test_all_longt5_models.py  test_bigbird.py  test_chunk_retrieval.py  test_finetuned_longt5.py  test_flant5.py  test_longt5_debug.py  test_longt5_proper.py  verify_bigbird_integration.py  verify_tokenizer.py
cache/embeddings/: embeddings_004ba664296645a5bc22f81f03ec20c7.npy  embeddings_0132877c5a3ab754d952261a39f612b7.npy  embeddings_014c64e9a50d196eba933d66e682ad84.npy  embeddings_01d647fb0935a84becc72090d978d8a3.npy  embeddings_01faf37653aa57ea54109e2344911b45.npy  embeddings_02331b4ab2495441be46185483e13693.npy  embeddings_0350346fbf2f8067420f63081b66b3b3.npy  embeddings_038b91a9507df1d3d6c61b532bda0c58.npy  embeddings_038c0ea0e8405c8518f60147466b5f8f.npy  embeddings_03e8f8fd28aaeab60f9f1447bc222852.npy  (+1222 more)
configs/: GRID_SEARCH_README.md
results/: aggregation_analysis.tex
scripts/: add_domain_field.py  analyze_grid_results.py  compare_aggregation.py  dataset_prep.py  filter_long_docs.py  generate_grid_configs.py  normalize_ref.py  run_aggregation_test.sh  run_full_grid.ps1  run_grid_search.ps1
src/eval/: metric.py
(+316 files in other folders)
