[project]
name = "ceng543-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bert-score>=0.3.13",
    "datasets>=4.3.0",
    "evaluate>=0.4.6",
    "faiss-cpu>=1.12.0",
    "ninja>=1.13.0",
    "nltk>=3.9.2",
    "prof>=1.3.0",
    "rouge-score>=0.1.2",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
